# Agentic-OneBotAds

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
.codex/: config.toml
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: campaigns.csv  campaigns_alt.csv
data/demo/: demo_atlas_glow_campaigns.csv
data/knowledge_base/: audience_personas.md  brand_guidelines.md  example_brand_playbook.md  marketing_strategy.md  platform_ads_rules.md  previous_ads_examples.md  product_catalog.md
docs/: AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  CHROMADB_RAG.md  CODEX_IMPLEMENTATION_NOTES.md  DECISIONS.md  PRODUCT.md  ROADMAP.md  SETUP.md  TESTING.md
docs/ui/: TODO.md
outputs/posts/: 20260423_103537_create_a_linkedin_publication_with_image_for_agent.json  20260423_104429_create_a_linkedin_publication_with_image_for_agent.json  20260423_185556_product_hello_kitty_platform_instagram_tone_profes.json  20260423_210924_analyze_this_campaign_data_recommend_optimizations.json  20260423_211935_analyze_this_campaign_data_recommend_optimizations.json  20260423_212605_analyze_this_campaign_data_recommend_optimizations.json  (+2 more)
rag/: build_index.py  query_engine.py
scripts/: generate_demo_data.py
tests/: test_analytics_tools.py  test_assistant_orchestrator.py  test_campaign_copy_agent_prompt.py  test_campaign_service.py  test_compliance_agent.py  test_health.py  test_image_tools.py  test_knowledge_base_filters.py  test_optimization_agent.py  test_rag_agent.py  test_root_app.py
(+114 files in other folders)
